--- a/lib/botup/bin/exec.erb
+++ b/lib/botup/bin/exec.erb
@@ -1,5 +1,9 @@
 #!/usr/bin/env ruby
 
-require_relative '<%= "../lib/#{snake_case_name}" %>'
+require 'rubygems'
+require 'bundler'
+Bundler.setup
+
+require '<%= "./lib/#{snake_case_name}" %>'
 
 <%= class_name %>.start_client
