--- a/lib/botup/templates/core_file.erb
+++ b/lib/botup/templates/core_file.erb
@@ -3,16 +3,16 @@ require 'yaml'
 
 $:.unshift("#{Dir.pwd}/lib")
 
+require '<%= snake_case_name %>/configurator'
 require '<%= snake_case_name %>/client'
 require '<%= snake_case_name %>/messenger'
 require '<%= snake_case_name %>/message_parser'
 require '<%= snake_case_name %>/commands_keeper'
 require '<%= snake_case_name %>/commands_manager'
+require '<%= snake_case_name %>/responder'
 
 module <%= class_name %>
-  CONFIGURATION = YAML.load_file("#{Dir.pwd}/config/config.yml")
-
-  def self.start_client
-    Client.new(CONFIGURATION['bot_token']).start
-  end
+def self.start_client
+  Client.new(Configurator.bot_token).start
+end
 end
