--- a/lib/botup/templates/commands_keeper.erb
+++ b/lib/botup/templates/commands_keeper.erb
@@ -1,19 +1,11 @@
 module <%= class_name %>
   module CommandsKeeper
-    COMMANDS = %i(test).freeze
-
-    def test
+    def test(params:, message:)
       'Wow, I\'m using telegram bot!'
     end
 
-    def help
-      # Put some help info here
-    end
-
-    private
-
-    def has_command?(command)
-      COMMANDS.include?(command)
+    def help(**)
+      "Put some help information here"
     end
   end
 end
