--- a/lib/botup/templates/message_parser.erb
+++ b/lib/botup/templates/message_parser.erb
@@ -1,33 +1,40 @@
 module <%= class_name %>
   class MessageParser
-    attr_reader :message
+    DEFAULT_COMMAND = :help.freeze
+    COMMANDS = %i[test].freeze
 
-    def initialize(message)
+    attr_reader :message, :commands
+
+    def initialize(message:)
       @message = message
     end
 
     def command
-      parse_message.first.to_sym
+      COMMANDS.find { |command| command == parsed_message&.first&.to_sym } || DEFAULT_COMMAND
     end
 
     def params
-      parse_message { |words| words.drop(1) } || []
+      parsed_message&.drop(1) || []
     end
 
     private
 
-    def parse_message
-      if  message_present? && message_starts_with_slash?
-        message.text[1..-1].split(' ')
-      end
+    def can_parse?
+      message_present? && message_starts_with_slash?
     end
 
     def message_present?
-      message.text && message.text.length > 1
+      message.text&.length&.positive?
     end
 
     def message_starts_with_slash?
-      message.text[0] == '/'
+      message.text.start_with?("/")
+    end
+
+    def parsed_message
+      return unless can_parse?
+
+      message.text[1..-1].split(" ")
     end
   end
 end
