--- a/lib/botup/templates/responder.erb
+++ b/lib/botup/templates/responder.erb
@@ -1,23 +1,18 @@
 module <%= class_name %>
   class Responder
-    attr_reader :api, :message
+    attr_reader :api, :message, :response
+    private :api, :message, :response
 
-    def initialize(api, message)
-      @api, @message = api, message
+    def initialize(api:, message:)
+      @api = api
+      @message = message
+
+      parser = MessageParser.new(message: message)
+      @response = CommandsManager.new(parser: parser).call
     end
 
     def call
-      messenger.send_text(parsed_response)
-    end
-
-    private
-
-    def messenger
-      @messenger ||= Messenger.new(api: api, chat_id: message.chat.id)
-    end
-
-    def parsed_response
-      @parsed_response ||= CommandsManager.new(message: message, messenger: messenger).call
+      api.send_message(chat_id: message.chat.id, text: response)
     end
   end
 end
